--- a/pages/bond-setup.html
+++ b/pages/bond-setup.html
@@ -9,14 +9,44 @@
 <body>
   <div class="container">
     <h1>Create Your Bond</h1>
-    <form id="bondForm">
-      <label>Partner Email:</label>
-      <input type="email" id="partnerEmail" required>
-      <button type="submit">Create Bond</button>
+
+    <form id="bondSetupForm">
+      <label for="userName">Your Name:</label>
+      <input type="text" id="userName" required>
+
+      <label for="partnerName">Partner's Name:</label>
+      <input type="text" id="partnerName" required>
+
+      <label for="bondType">Bond Type:</label>
+      <select id="bondType" required>
+        <option value="friendship">Friendship</option>
+        <option value="relationship">Relationship</option>
+        <option value="marriage">Marriage</option>
+      </select>
+
+      <label for="bondDuration">Bond Duration (days):</label>
+      <select id="bondDuration" required>
+        <option value="7">7 Days</option>
+        <option value="30">30 Days</option>
+        <option value="90">90 Days</option>
+      </select>
+
+      <label for="bondStartDate">Start Date:</label>
+      <input type="date" id="bondStartDate" required>
+
+      <label for="bondEndDate">End Date:</label>
+      <input type="date" id="bondEndDate" required>
+
+      <button type="button" id="startBondBtn">Start Bond</button>
     </form>
+
+    <div id="bondSummary" class="box"></div>
+    <div id="bondInfo" class="box"></div>
+
     <p><a href="../index.html">Back to Login</a></p>
   </div>
 
   <script src="../js/app.js"></script>
 </body>
 </html>
+
