--- a/pages/bond-setup.html
+++ b/pages/bond-setup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create Bond</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <div class="container">
@@ -43,10 +43,9 @@
     <div id="bondSummary" class="box"></div>
     <div id="bondInfo" class="box"></div>
 
-    <p><a href="../index.html">Back to Login</a></p>
+    <p><a href="/index.html">Back to Login</a></p>
   </div>
 
-  <script src="../js/app.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
-
