--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bond Dashboard</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <div class="container">
@@ -14,9 +14,7 @@
     </header>
 
     <!-- Bond Info -->
-    <section id="bondInfo" class="box">
-      <!-- Bond details will be injected by app.js -->
-    </section>
+    <section id="bondInfo" class="box"></section>
 
     <!-- Points Display -->
     <section class="points box">
@@ -24,21 +22,22 @@
       <p><strong>You:</strong> <span id="userPoints">100</span></p>
       <p><strong>Partner:</strong> <span id="partnerPoints">100</span></p>
     </section>
-<!-- Bond Level / Progress -->
-<section class="box">
-  <h2>Bond Level</h2>
-  <div class="progress-container">
-    <p>You:</p>
-    <div class="progress-bar">
-      <div id="userProgress" class="progress-fill"></div>
-    </div>
-    <p>Partner:</p>
-    <div class="progress-bar">
-      <div id="partnerProgress" class="progress-fill"></div>
-    </div>
-  </div>
-  <p>Level: <span id="bondLevel">1</span></p>
-</section>
+
+    <!-- Bond Level / Progress -->
+    <section class="box">
+      <h2>Bond Level</h2>
+      <div class="progress-container">
+        <p>You:</p>
+        <div class="progress-bar">
+          <div id="userProgress" class="progress-fill"></div>
+        </div>
+        <p>Partner:</p>
+        <div class="progress-bar">
+          <div id="partnerProgress" class="progress-fill"></div>
+        </div>
+      </div>
+      <p>Level: <span id="bondLevel">1</span></p>
+    </section>
 
     <!-- Interaction Form -->
     <section class="box">
@@ -82,6 +81,6 @@
     </section>
   </div>
 
-  <script src="../js/app.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
