--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BondPoints - Login</title>
-  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
     <h1>BondPoints</h1>
     <form id="loginForm">
       <label>Email:</label>
-      <input type="email" id="email" required>
+      <input type="email" id="login-email" required>
       
       <label>Password:</label>
-      <input type="password" id="password" required>
+      <input type="password" id="login-password" required>
       
       <button type="submit">Login</button>
     </form>
-    <p>Don’t have an account? <a href="/pages/bond-setup.html">Create Bond</a></p>
+    <p>Don’t have an account? <a href="pages/bond-setup.html">Create Bond</a></p>
   </div>
 
-  <script src="js\app.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
