--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
       
       <button type="submit">Login</button>
     </form>
-    <p>Don’t have an account? <a href="pages/bond-setup.html">Create Bond</a></p>
+    <p> <a href="pages/bond-setup.html">Create Bond</a></p>
   </div>
 
   <script src="js/login.js"></script>
